# Patchwork-Assurance

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  Procfile  Procfile.dev  README.md  check_index.py  pyproject.toml  railway.api.toml  railway.ui.toml  requirements-lock.txt
.claude/commands/: phase-check.md
.claude/rules/: corpus.md  legal-content.md  rag.md
.github/workflows/: ci.yml  monitor.yml  radar.yml
.streamlit/: config.toml
corpus/: README.md  ca-ccpa-admt.md  ca-ccpa-admt.meta.yaml  ca-feha-ads.md  ca-feha-ads.meta.yaml  co-cpa.md  co-cpa.meta.yaml  co-sb26-189.md  co-sb26-189.meta.yaml  ct-ctdpa.md  ct-ctdpa.meta.yaml  ct-sb5-pa26-15.md  ct-sb5-pa26-15.meta.yaml  il-aivia.md  il-aivia.meta.yaml  il-hb3773.md  il-hb3773.meta.yaml  nj-njac-13-16.md  nj-njac-13-16.meta.yaml  nj-njdpa.md  nj-njdpa.meta.yaml  nyc-ll144.md  nyc-ll144.meta.yaml  tx-traiga.md  tx-traiga.meta.yaml
corpus/ocr-source-pdfs/: README.md
docs/: BRAINSTORM.md  CORPUS_TRACKER.md  FEASIBILITY_AND_VISION_2026-06-14.md  NAMING_2026-06-14.md  OBSERVABILITY.md  PATCHWORK_REVIEW_JULY_2026.md  POST_LAUNCH_PLAN.md  RAILWAY_COST.md  ROADMAP.md  ROADMAP_AB.md  SPEC_V1.md  SPENDING_SAFETY.md
docs/archive/: BRAINSTORM.md  FEASIBILITY_AND_VISION_2026-06-14.md  NAMING_2026-06-14.md  README.md  README_predev-launch.md  ROADMAP_AB.md  phase-13-plus-roadmap.md
docs/roadmap/: aws-bedrock-fit-sketch.md  next-moves-brainstorm.md  phase-0-scaffold-and-spine-IMPLEMENTATION.md  phase-0-scaffold-and-spine.md  phase-1-corpus-IMPLEMENTATION.md  phase-1-corpus.md  phase-10-mcp-server-IMPLEMENTATION.md  phase-10-mcp-server.md  phase-11-shareable-memo-and-polish-IMPLEMENTATION.md  phase-11-shareable-memo-and-polish.md  phase-12-multi-agent-memo-IMPLEMENTATION.md  phase-12-multi-agent-memo.md  phase-13-legiscan-radar-IMPLEMENTATION.md  phase-13-legiscan-radar.md  phase-13-plus-roadmap.md  phase-14-benchmark-vs-frontier-IMPLEMENTATION.md  phase-14-benchmark-vs-frontier.md  phase-2-core-logic-IMPLEMENTATION.md  phase-2-core-logic.md  phase-3-fastapi-IMPLEMENTATION.md  phase-3-fastapi.md  phase-4-streamlit-ui-IMPLEMENTATION.md  phase-4-streamlit-ui.md  phase-4.5-visual-identity-and-front-door-IMPLEMENTATION.md  phase-4.5-visual-identity-and-front-door.md  phase-4.6-memo-form-and-scope-rework-IMPLEMENTATION.md  phase-4.6-memo-form-and-scope-rework.md  phase-5-deploy-IMPLEMENTATION.md  phase-5-deploy.md  phase-6-evals-IMPLEMENTATION.md  (+7 more)
eval/: __init__.py  adjudicate.py  baseline.py  harness.py  judge.py  loader.py  merge.py  metrics.py  prose.py  run.py  safety.py  sweep_knobs.py
site/: index.html  main.js  styles.css
tests/: test_adjudicate.py  test_agents.py  test_api.py  test_api_health.py  test_assess.py  test_baseline.py  test_chat.py  test_chunk.py  test_core_health.py  test_currency.py  test_draft.py  test_eval_harness.py  test_grounding.py  test_injection.py  test_lexical.py  test_live.py  test_llm_openrouter.py  test_loader.py  test_mcp_server.py  test_memo.py  test_merge.py  test_meta.py  test_metadata.py  test_metadata_query.py  test_obs.py  test_pdf.py  test_pipeline.py  test_poll.py  test_prose.py  test_provenance.py  test_radar.py  test_render.py  test_retrieval.py  test_router.py  test_sanitize.py  test_scope.py  test_theme_config.py  test_ui_client.py  test_ui_pages.py
(+79 files in other folders)
