[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patchwork-assurance"
version = "0.1.0"
description = "AI-native tool for the state-by-state AI-regulation patchwork."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "streamlit",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "honcho",
    "chromadb",
    "fastembed",
    "pyyaml",
    "pypdf",  # ingestion-agent PDF text-layer extraction (assess stage); pure-Python
    # OCR fallback for scanned-image statute PDFs (assess stage). Lazy-imported so only the
    # agent path pays for them. Needs the `tesseract` system binary where the agent runs
    # (monitor.yml installs it; the Railway app surfaces never OCR). PyMuPDF is AGPL-3.0 —
    # swap to pypdfium2 (Apache/BSD) if copyleft is a concern.
    "pymupdf",
    "pytesseract",
    "pillow",
    "anthropic",
    "openai",  # OpenRouter provider (OpenAI-compatible API); Seam 4 — only core/llm.py imports it
    "sse-starlette",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]

# src layout: tell hatchling where the importable package lives.
[tool.hatch.build.targets.wheel]
packages = ["src/patchwork_assurance"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear — a sensible, not-fussy default set.
select = ["E", "F", "I", "UP", "B"]
# The formatter owns line length for code; E501 otherwise only fires on unbreakable
# lines (long URLs, the inline SVG in the footer), which is noise — so don't lint it.
ignore = ["E501", "B008"]  # B008: Depends() in defaults is the intended FastAPI pattern

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so tests can import the top-level `eval` harness package
# under a bare `pytest` (what CI and `make test` run), not just `python -m pytest`.
pythonpath = ["."]
markers = ["live: hits the real Anthropic API (deselected by default)"]
addopts = "-m 'not live'"
